# Nettverksprogrammering

./: .gitignore  README.md
SindreP/: Oving4-SSLtext.txt
SindreP/Oving1/: CMakeLists.txt  RunTest.cpp  main.cpp
SindreP/Oving4-Real/: Client.cpp  Server.cpp
SindreP/Oving4-SSL/: build.xml
SindreP/Oving4-SSL/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
SindreP/Oving4-SSL/src/client/: JavaSSLClient.java
SindreP/Oving4-TLS/: Oving4-SSLtext.txt  dumpfile.pcap  dumpfile2.pcap  oving4dump1.pcap  oving4dump2.pcap  oving4dump3.pcap  oving4dump4.pcap
SindreP/Oving4-TLS/Oving4-Real/: CMakeLists.txt  Client.cpp  Kalkulator.cpp  Server.cpp  kalk.h
SindreP/Oving4-TLS/Oving4-SSL/: build.xml
SindreP/Oving4-TLS/Oving4-SSL/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
SindreP/Oving4-TLS/Oving4-SSL/nbproject/private/: private.properties  private.xml
SindreP/Oving4-TLS/Oving4-SSLServer/: build.xml
SindreP/Oving4-TLS/Oving4-SSLServer/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
SindreP/Oving4-TLS/Oving4-SSLServer/nbproject/private/: private.xml
SindreP/Oving4-TLS/Oving4-SSLServer/src/server/: JavaSSLServer.java
SindreP/Oving4-TLS/mykeystore/: MyKey  examplestore
SindreP/Oving5/Intellij/src/pak/: Konto.java  main.java
SindreP/Oving5/Intellij2/: Teori.txt
SindreP/Oving5/Intellij2/src/pak/: Konto.java  Oppg3.java  main.java  oppgave4.java
SindreP/Oving6/: CMakeLists.txt  main.cpp  run.html
SindreP/Oving6Java/src/main/: app.java
SindreP/oving3/: CMakeLists.txt  echo_server.cpp  main.cpp
SindreP/oving4/: echo_server.cpp
SindreP/oving5-css/: CMakeLists.txt  main.cpp
SindreP/wsOving2/: CMakeLists.txt
SindreT/Oving1/: CMakeLists.txt  altMain.cpp  findprimes.h  main.cpp  primetest.cpp
SindreT/Oving2Workshop/: CMakeLists.txt  echo_server.cpp
SindreT/Oving3/: CMakeLists.txt  Client.cpp  Server.cpp  TCP-pakker-Oving3.pcapng  oleSinKode.cpp  webserver.cpp
SindreT/Oving4/: CMakeLists.txt  EchoClient.cpp  EchoServer.cpp  test.cpp
SindreT/Oving4-SSL/src/: JavaSSLClient.java  JavaSSLServer.java
SindreT/Oving5/: Konto_test.go  bank.go  hello.go
SindreT/Oving5/anetteSinKode/: kontoORM.go
SindreT/Oving5/trygg/: tryggBank.go
SindreT/Oving5Java/: oppg2.pcapng  oppg3.pcapng  oppg4.pcapng
SindreT/Oving6/: CMakeLists.txt  Server.cpp
SindreT/Oving7/: CMakeLists.txt  main.cpp
SindreT/Oving7-js/: index.js  nonono.js  package.json  server.js
SindreT/Oving7-js/public/: index.html
SindreT/Oving7-js/sslcert/: server.cnf  server.crt  server.key
